# difft-file-viewer

./: .clangformat.example  .gitignore  Cargo.toml  README.md  README.zh-CN.md  build.rs
difftastic/: build.rs
difftastic/manual/src/: parser_vendoring.md
difftastic/src/: main.rs  options.rs  summary.rs
difftastic/src/display/: json.rs
difftastic/src/parse/: syntax.rs
difftastic/vendored_parsers/tree-sitter-latex/: .gitignore
src/: clang_format_preprocess.rs  difft_probe.rs  line_ending.rs  macos_edge.rs  macos_icon.rs  main.rs  model.rs  segments.rs  windows_edge.rs
ui/: app.slint
