[package]
name = "difft-file-viewer"
description = "Slint GUI viewer for difftastic single-file diffs."
version = "0.70.0"
edition = "2021"
rust-version = "1.85.0"
license = "MIT"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = { version = "1.13", default-features = false, features = ["backend-winit", "renderer-femtovg", "compat-1-2"] }

[build-dependencies]
slint-build = "1.13"
