[package]
name = "difft-file-viewer"
description = "Slint GUI viewer for difftastic single-file diffs."
version = "0.70.0"
edition = "2021"
rust-version = "1.85.0"
license = "MIT"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = { version = "1.13", default-features = false, features = ["backend-winit", "renderer-femtovg", "compat-1-2"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2.2", default-features = false, features = [
    "NSApplication",
    "NSImage",
] }
objc2-foundation = { version = "0.2.2", default-features = false, features = ["NSData"] }

[build-dependencies]
slint-build = "1.13"
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"
ico = "0.4"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
